--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,7 +77,7 @@ install:
   - sed -i "s/pandas==.*/pandas==%PANDAS_VERSION%/" etc/requirements.txt
   - sed -i "s/scipy==.*/scipy==%SCIPY_VERSION%/" etc/requirements.txt
   - IF NOT "%PANDAS_DATAREADER_VERSION%"=="" sed -i "s/pandas-datareader==.*/pandas-datareader==%PANDAS_DATAREADER_VERSION%/" etc/requirements.txt
-  - IF NOT "%DASK_VERSION%"=="" sed -i "s/dask[dataframe]==.*/data[dataframe]==%DASK_VERSION%/" etc/requirements_blaze.txt
+  - IF NOT "%DASK_VERSION%"=="" sed -i "s/dask\[dataframe\]==.*/data\[dataframe\]==%DASK_VERSION%/" etc/requirements_blaze.txt
   - cat etc/requirements.txt
   - conda info -a
   - conda install conda=4.3.30 conda-build=3.0.28 anaconda-client=1.6.3 --yes -q
